# keras-gpu-metrics

./: README.md  energy_usage_example.ipynb  gpu_info.ipynb  gpu_metrics_example.ipynb  keras_gpu_callbacks.py  keras_gpu_metrics.py  power_usage_example.ipynb  pyproject.toml  requirements.txt
gpu_info/: gpu_status.py  nvml.py
keras_gpu_metrics/: __init__.py  callbacks.py
keras_gpu_metrics/gpu_info/: gpu_status.py  nvml.py
src/keras_gpu_metrics/: callbacks.py
