[project]
name = "keras_gpu_metrics"
version = "0.0.1"
authors = [
  { name="Daniel Treiman", email="dan.treiman@gmail.com" },
]
description = "Keras callbacks and metrics for tracking GPU utilization, temperature, and power consumption."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dantreiman/keras-gpu-metrics"
"Bug Tracker" = "https://github.com/dantreiman/keras-gpu-metrics/issues"
